--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@
   --text-color-alt: #363636;
   --color-gray: #8f8f8f;
   --color-blue: #639af9;
-  --color-blue-light: #5773a8;
+  --color-blue-dark: #5870A2;
 
   /* fonts */
   --body-font-family: 'Libre Franklin', 'Libre Franklin Fallback', sans-serif;
